# Task-Manager

./: .gitignore  README.md  pyproject.toml  pyrefly.toml  tasks.db
app/: database.py  main.py  models.py  schemas.py
app/core/: security.py
app/repositories/: tasks_repository.py  user_repository.py
app/routers/: auth_router.py  task_router.py  tasks_router.py
app/services/: auth_services.py  tasks_service.py
