[project]
name = "task-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=4.0.0,<5.0.0",
    "fastapi[standard]>=0.136.3",
    "jwt>=1.4.0",
    "passlib>=1.7.4",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
